// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMailPayloads create correct payload for blinded recipients of the message: blinded jane 1`] = `
Object {
  "Content": Object {
    "data": Array [
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      45,
      106,
      97,
      110,
      101,
      64,
      109,
      97,
      105,
      108,
      99,
      104,
      97,
      105,
      110,
      46,
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 27,
    "ContentSignature": Uint8Array [
      86,
      215,
      123,
      207,
      216,
      115,
      88,
      203,
      3,
      209,
      244,
      156,
      68,
      26,
      221,
      128,
      72,
      163,
      199,
      202,
      136,
      101,
      170,
      46,
      157,
      151,
      209,
      141,
      104,
      48,
      62,
      62,
      100,
      123,
      37,
      3,
      129,
      206,
      219,
      35,
      105,
      94,
      83,
      92,
      223,
      80,
      0,
      4,
      163,
      184,
      152,
      79,
      249,
      224,
      49,
      40,
      148,
      19,
      63,
      105,
      206,
      105,
      246,
      2,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;

exports[`createMailPayloads create correct payload for blinded recipients of the message: blinded maria 1`] = `
Object {
  "Content": Object {
    "data": Array [
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      45,
      109,
      97,
      114,
      105,
      97,
      64,
      109,
      97,
      105,
      108,
      99,
      104,
      97,
      105,
      110,
      46,
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 28,
    "ContentSignature": Uint8Array [
      155,
      242,
      255,
      109,
      142,
      20,
      212,
      72,
      146,
      26,
      184,
      149,
      116,
      18,
      235,
      202,
      6,
      81,
      23,
      67,
      30,
      59,
      29,
      171,
      60,
      179,
      44,
      211,
      27,
      255,
      185,
      246,
      136,
      95,
      129,
      82,
      128,
      67,
      48,
      21,
      236,
      92,
      65,
      241,
      204,
      176,
      161,
      157,
      156,
      191,
      155,
      231,
      51,
      102,
      84,
      75,
      58,
      198,
      123,
      112,
      108,
      25,
      13,
      0,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;

exports[`createMailPayloads create correct payload for sender of the message: original 1`] = `
Object {
  "Content": Object {
    "data": Array [
      111,
      114,
      105,
      103,
      105,
      110,
      97,
      108,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 8,
    "ContentSignature": Uint8Array [
      164,
      248,
      247,
      17,
      76,
      148,
      172,
      110,
      98,
      91,
      196,
      76,
      121,
      13,
      28,
      6,
      40,
      3,
      151,
      15,
      209,
      95,
      144,
      141,
      127,
      61,
      98,
      248,
      227,
      210,
      192,
      212,
      8,
      39,
      104,
      216,
      136,
      115,
      181,
      153,
      11,
      217,
      122,
      182,
      224,
      231,
      234,
      184,
      97,
      233,
      73,
      254,
      31,
      251,
      26,
      231,
      9,
      110,
      232,
      97,
      172,
      122,
      90,
      1,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;

exports[`createMailPayloads create correct payload for visible recipients of the message: visible 1`] = `
Object {
  "Content": Object {
    "data": Array [
      118,
      105,
      115,
      105,
      98,
      108,
      101,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 7,
    "ContentSignature": Uint8Array [
      7,
      255,
      141,
      135,
      111,
      3,
      200,
      216,
      13,
      125,
      44,
      9,
      222,
      238,
      224,
      214,
      220,
      226,
      86,
      164,
      5,
      16,
      221,
      151,
      162,
      169,
      90,
      223,
      52,
      27,
      107,
      132,
      241,
      181,
      38,
      220,
      178,
      199,
      128,
      76,
      2,
      122,
      125,
      193,
      165,
      255,
      11,
      185,
      48,
      205,
      5,
      12,
      133,
      111,
      202,
      75,
      125,
      58,
      240,
      50,
      207,
      170,
      210,
      14,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;
